--- a/Desafio_Jawas/frontend/html/login.html
+++ b/Desafio_Jawas/frontend/html/login.html
@@ -8,12 +8,18 @@
 <body>
     <h1>Iniciar sesión</h1>
 
+    <span id="msgExito"></span>
+
     <input type="text" id="mailLogin">
     <label for="mailLogin">Correo Electrónico</label>
+    <span id="msgErrorEmail"></span>
 
     <input type="text" id="passwdLogin">
     <label for="passwdLogin">Contraseña</label>
+    <span id="msgErrorPasswd"></span>
 
-    <input type="button" value="Iniciar Sesión">
+    <p>¿Aún no tienes cuenta? Regístrate <a href="registro.html">aquí</a></p>
+
+    <input type="button" value="Iniciar Sesión" id="btnLogin">
 </body>
 </html>
