Error a la conexion con el servidor, pero la ruta desde backend funciona

--- a/Desafio_Jawas/frontend/html/index.html
+++ b/Desafio_Jawas/frontend/html/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button>
+        <a href="registro.html">reg</a>
+    </button>
 </body>
 </html>
