--- a/Desafio_Jawas/frontend/html/registro.html
+++ b/Desafio_Jawas/frontend/html/registro.html
@@ -8,27 +8,29 @@
 <body>
     <h1>Registro</h1>
 
-    <span id="msgExito"></span>
+    <span id="msgExito"></span><br>
+
+    <input type="text" id="fotoPerfilRegistro">
 
     <input type="text" id="nombreRegistro">
     <label for="nombreRegistro">Nombre</label>
-    <span id="msgErrorNombre"></span>
+    <span id="msgErrorNombre"></span><br>
 
     <input type="text" id="apellidoRegistro">
     <label for="apellidoRegistro">Apellido</label>
-    <span id="msgErrorApellido"></span>
+    <span id="msgErrorApellido"></span><br>
 
     <input type="email" id="mailRegistro">
     <label for="mailRegistro">Correo Electrónico</label>
-    <span id="msgErrorEmail"></span>
+    <span id="msgErrorEmail"></span><br>
 
     <input type="password" id="passwdRegistro">
     <label for="passwdRegistro">Contraseña</label>
-    <span id="msgErrorPasswd"></span>
+    <span id="msgErrorPasswd"></span><br>
 
     <input type="password" id="confPasswdRegistro">
     <label for="confPasswdRegistro">Confirmar contraseña</label>
-    <span id="msgErrorConfPasswd"></span>   
+    <span id="msgErrorConfPasswd"></span>  <br> 
 
     <input type="button" value="Registrarse" id="btnRegistro">
 </body>
