Registro conectado y funcionando

--- a/Desafio_Jawas/frontend/html/registro.html
+++ b/Desafio_Jawas/frontend/html/registro.html
@@ -10,7 +10,7 @@
 
     <span id="msgExito"></span><br>
 
-    <input type="text" id="fotoPerfilRegistro">
+    <input type="text" id="fotoPerfilRegistro" placeholder="foto"><br>
 
     <input type="text" id="nombreRegistro">
     <label for="nombreRegistro">Nombre</label>
