Inicio de sesión funcionando correctamente

--- a/Desafio_Jawas/frontend/html/login.html
+++ b/Desafio_Jawas/frontend/html/login.html
@@ -12,7 +12,7 @@
 
     <input type="text" id="mailLogin">
     <label for="mailLogin">Correo Electrónico</label>
-    <span id="msgErrorEmail"></span>
+    <span id="msgErrorEmail"></span><br>
 
     <input type="text" id="passwdLogin">
     <label for="passwdLogin">Contraseña</label>
@@ -22,4 +22,5 @@
 
     <input type="button" value="Iniciar Sesión" id="btnLogin">
 </body>
+<script type="module" src="../js/login.js"></script>
 </html>
