--- a/Desafio_Jawas/frontend/html/donacion.html
+++ b/Desafio_Jawas/frontend/html/donacion.html
@@ -12,7 +12,7 @@
         }
 
         .progress-container {
-            width: 50%;
+            width: 50vw;
             text-align: center;
         }
 
