Avance en la generación de la tabla lotes

--- a/Desafio_Jawas/frontend/html/donacion.html
+++ b/Desafio_Jawas/frontend/html/donacion.html
@@ -38,12 +38,14 @@
         <!-- Aquí va el mapa -->
     </div>
 
-    <button id="mandarLote">Mandar Lote</button>
+    <button id="mandarLote">Mandar lote</button>
 
     <h3>Entregándose...</h3>
     <div class="progress-container">
         <div class="progress-bar" id="myBar">0%</div>
     </div>
+
+    <button id="cancelarLote">Cancelar lote</button>
 
     <h2>LOTES DEL USUARIO</h2>
     <table id="tablaLotes">
