Servidor webpack arreglado y se muestra la tabla de usuarios

--- a/Desafio_Jawas/frontend/html/index.html
+++ b/Desafio_Jawas/frontend/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Presentacion</title>
 </head>
 <body>
     <div id="divPresentacion">
@@ -19,9 +19,8 @@
             </p>
         </div>
 
-        <button>
-            <a href="./login.html" title="Diseños CIFP Virgen de Gracia" id="btnParticipar">¡Participar ya!</a>
-        </button>
+        <input type="button" value="Participa Ya" id="btnParticipar">
     </div>
 </body>
+<script type="module" src="../js/app.js"></script>
 </html>
