--- a/Desafio_Jawas/frontend/html/despieceLoteDetalles.html
+++ b/Desafio_Jawas/frontend/html/despieceLoteDetalles.html
@@ -19,20 +19,20 @@
         <label for="descripcionComponente"></label>
         <input type="text" id="descripcionComponente" placeholder="Descripción">
 
-        <label for="descripcionComponente"></label>
-        <input type="text" id="descripcionComponente" placeholder="Cantidad">
+        <label for="cantidadComponente"></label>
+        <input type="text" id="cantidadComponente" placeholder="Cantidad">
 
         <span id="msgErrorLote"></span>
 
         <input type="button" value="Añadir" id="btnAñadirComponente">
 
         <h1> INTERIOR LOTE</h1>
-        
+
         <table id="tablaInfoLotes">
 
         </table>
         
 
     </body>
-    <script type="module" src="../js/despieceLote.js"></script>
+    <script type="module" src="../js/despieceLoteDetalles.js"></script>
 </html>
