Borrado implementado correctamente

--- a/Desafio_Jawas/frontend/html/gestionUsuarios.html
+++ b/Desafio_Jawas/frontend/html/gestionUsuarios.html
@@ -6,7 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Usuarios activos en el sistema</h1>
     <table id="tablaUsuarios"></table>
+
+    <input type="button" id="btnBorrar" value="Borrar Usuario">
+    <input type="button" id="btnModificar" value="Modificar Usuario">
+    <input type="button" id="btnAgregar" value="Agregar Usuario">
 </body>
 <script type="module" src="../js/gestionUsuarios.js"></script>
 </html>
