funciones clasificador completas

--- a/Desafio_Jawas/frontend/html/despieceLoteDetalles.html
+++ b/Desafio_Jawas/frontend/html/despieceLoteDetalles.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="../css/despieceLote.css">
         <title>Desguazar</title>
     </head>
 
@@ -10,6 +11,8 @@
         <h1> DESGUAZAR LOTE </h1>
 
         <span id="msgExito"></span><br>
+        
+        <select id="selectComponentes"></select>
         
         <label for="descripcionComponente"></label>
         <input type="text" id="descripcionComponente" placeholder="Descripción">
