--- a/Desafio_Jawas/frontend/html/despieceLote.html
+++ b/Desafio_Jawas/frontend/html/despieceLote.html
@@ -4,28 +4,60 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../css/despieceLote.css">
+        <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
         <title>Lotes</title>
     </head>
 
     <body>
-        <div style="background-color: rgb(253, 208, 253);">
+        <header>
+            <a href="../html/home.html" id="inicio">
+                <img src="../assets/Jawas.webp" alt="logo" width="40px" >
+            </a>
+            <h1>JAWAS JOYAS</h1>
+            <a href="../html/perfil.html" id="perfil">
+                <img src="../assets/perfil.png" alt="logo" width="35px" >
+            </a>
+        </header>
+
+        <div>
             <input type="search" id="searchBar" placeholder="Buscar lote por el ID">
             <button id="searchButton">Buscar</button>
         </div>
         
-        <div style="background-color: lightblue;">
+        <div>
             <span id="msgErrorLote"></span>
         </div>
 
-        <div style="background-color: rgb(255, 219, 219);">
+        <div>
             <table id="tablaLoteClasificador">
                 <h2>Lotes por clasificar</h2>
             </table>
         </div>
 
-        <div style="background-color: rgb(228, 255, 219);">
+        <div >
             <input type="button" value="Desguazar Lote" id="btnDesguazar">
         </div>
+
+        <video autoplay muted loop id="myVideo">
+            <source src="../assets/video.mp4" type="video/mp4">
+        </video> 
+    
+        <footer>
+            <div class="footer-contenido">
+                <div class="redes-sociales">
+                    <p>Puedes encontrarnos en:</p>
+                    <a href="https://www.instagram.com/" target="_blank"><img src="../assets/icono_instagram.webp" alt="Instagram" height="68px"></a>
+                    <a href="https://twitter.com/?lang=es " target="_blank"><img src="../assets/icono_twitter.png" alt="Twitter" height="55px"></a>
+                    <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="../assets/icono_facebook.png" alt="Facebook" height="55px"></a>
+                </div>
+                <div class="politica-privacidad">
+                    <a href="politica-de-privacidad.html">Política de Privacidad</a>
+                </div>
+                <div class="copyright">
+                    <span>&copy; 2023 Jawas Joyas</span>
+                </div> 
+            </div>
+        </footer>
 
     </body>
     <script type="module" src="../js/despieceLote.js"></script>
