--- a/Desafio_Jawas/frontend/html/index.html
+++ b/Desafio_Jawas/frontend/html/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
     <title>Presentacion</title>
 </head>
 <body>
+    <header>
+        <a href="../html/home.html" id="inicio">
+            <img src="../assets/Jawas.webp" alt="logo" width="40px" >
+        </a>
+        <h1>JAWAS JOYAS</h1>
+        <a href="../html/perfil.html" id="perfil">
+            <img src="../assets/perfil.png" alt="logo" width="35px" >
+        </a>
+    </header>
     <div id="divPresentacion">
         <div id="txtPresentacion">
             <h2>Diseños CIFP Virgen de Gracia</h2>
@@ -21,6 +31,27 @@
 
         <input type="button" value="Participa Ya" id="btnParticipar">
     </div>
+
+    <video autoplay muted loop id="myVideo">
+        <source src="../assets/video.mp4" type="video/mp4">
+    </video> 
+
+    <footer>
+        <div class="footer-contenido">
+            <div class="redes-sociales">
+                <p>Puedes encontrarnos en:</p>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/icono_instagram.webp" alt="Instagram" height="68px"></a>
+                <a href="https://twitter.com/?lang=es " target="_blank"><img src="../assets/icono_twitter.png" alt="Twitter" height="55px"></a>
+                <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="../assets/icono_facebook.png" alt="Facebook" height="55px"></a>
+            </div>
+            <div class="politica-privacidad">
+                <a href="politica-de-privacidad.html">Política de Privacidad</a>
+            </div>
+            <div class="copyright">
+                <span>&copy; 2023 Jawas Joyas</span>
+            </div> 
+        </div>
+    </footer>
 </body>
 <script type="module" src="../js/app.js"></script>
 </html>
