ver recetas e ingredientes

--- a/Desafio_Jawas/frontend/html/recetas.html
+++ b/Desafio_Jawas/frontend/html/recetas.html
@@ -19,6 +19,11 @@
                 <img src="../assets/perfil.png" alt="logo" width="35px" >
             </a>
         </header>
+
+        <div>
+            <input type="search" id="searchBar" placeholder="Buscar lote por el ID">
+            <button id="searchButton">Buscar</button>
+        </div>
         
         <div>
             <table id="tablaRecetas">
@@ -30,6 +35,10 @@
             <table id="tablaIngredientes">
                 <h2>Ingredientes</h2>
             </table>
+        </div>
+
+        <div>
+            <span id="msgErrorReceta"></span>
         </div>
 
         <div>
@@ -62,5 +71,5 @@
         </footer>
         
     </body>
-    <script type="module" src="../js/despieceLote.js"></script>
+    <script type="module" src="../js/recetas.js"></script>
 </html>
