Fechas formateadas en javascript y datos se cargan correctamente al modificar

--- a/Desafio_Jawas/frontend/html/modificarCrearUsuario.html
+++ b/Desafio_Jawas/frontend/html/modificarCrearUsuario.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h1 id="titulo"></h1>
-    <img src="" id="fotoUsuario"><br>
+    <img src="" id="fotoUsuario" width="200"><br>
     Nombre:<input type="text" id="nombreUsuario"><br>
-    Apellido:<input type="text" id="apellidoUsuario">
-    Email:<input type="text" id="emailUsuario">
-    Contraseña:<input type="text" id="passwdUsuario">
+    Apellido:<input type="text" id="apellidoUsuario"><br>
+    Email:<input type="text" id="emailUsuario"><br>
+    Contraseña:<input type="text" id="passwdUsuario"><br>
 
     <input type="button" value="" id="btnEnviar">
 </body>
