Se agregan los uauarios correctamente a la base de datos, funciona un poco mal la foto de perfil

--- a/Desafio_Jawas/frontend/html/modificarCrearUsuario.html
+++ b/Desafio_Jawas/frontend/html/modificarCrearUsuario.html
@@ -12,8 +12,9 @@
     Apellido:<input type="text" id="apellidoUsuario"><br>
     Email:<input type="text" id="emailUsuario"><br>
     Contraseña:<input type="text" id="passwdUsuario"><br>
+    <label for="passwdUsuario" id="lblPasswdUsuario2"></label><input type="text" id="passwdUsuario2"><br>
 
-    <input type="button" value="" id="btnEnviar">
+    <input type="button" id="btnEnviar">
 </body>
 <script type="module" src="../js/modificarCrearUsuario.js"></script>
 </html>
