funcionalidad de modificar cantidades

--- a/Desafio_Jawas/frontend/html/recetas.html
+++ b/Desafio_Jawas/frontend/html/recetas.html
@@ -23,6 +23,7 @@
         <div>
             <input type="search" id="searchBar" placeholder="Buscar lote por el ID">
             <button id="searchButton">Buscar</button>
+            <span id="msgErrorSearch"></span>
         </div>
         
         <div>
@@ -33,7 +34,6 @@
 
         <div>
             <table id="tablaIngredientes">
-                <h2>Ingredientes</h2>
             </table>
         </div>
 
@@ -43,6 +43,10 @@
 
         <div>
             <input type="button" value="Ver ingredentes" id="btnIngredientes">
+        </div>
+
+        <div>
+            <input type="button" value="Modificar receta" id="btnModificarReceta">
         </div>
 
         <div>
