Gestion de inventarios funcionando correctamente, faltan los mensajes de error

--- a/Desafio_Jawas/frontend/html/inventario.html
+++ b/Desafio_Jawas/frontend/html/inventario.html
@@ -9,6 +9,8 @@
     <h1>Inventario</h1>
 
     <table id="tablaInventario"></table>
+
+    <input type="button" value="Guardar Cambios" id="btnGuardar">
 </body>
 <script type="module" src="../js/inventario.js"></script>
 </html>
