--- a/Desafio_Jawas/frontend/html/despieceLote.html
+++ b/Desafio_Jawas/frontend/html/despieceLote.html
@@ -20,8 +20,9 @@
         </header>
 
         <div>
-            <input type="search" id="searchBar" placeholder="Buscar lote por el ID">
+            <input type="search" id="searchBar" placeholder="Buscar lote">
             <button id="searchButton">Buscar</button>
+            <span id="msgErrorSearch"></span>
         </div>
         
         <div>
