inventario checkbox  arreglado

--- a/Desafio_Jawas/frontend/html/home.html
+++ b/Desafio_Jawas/frontend/html/home.html
@@ -42,6 +42,10 @@
             <a href="componentes.html"> Gestionar componentes</a>
             </button>
 
+            <button>
+                <a href="inventario.html"> Gestionar inventarios</a>
+                </button>
+
         <video autoplay muted loop id="myVideo">
             <source src="../assets/video.mp4" type="video/mp4">
         </video> 
