--- a/Desafio_Jawas/frontend/html/inventario.html
+++ b/Desafio_Jawas/frontend/html/inventario.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventario</title>
-</head>
-<body>
+<html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
+        <link rel="stylesheet" type="text/css" href="../css/despieceLote.css">
+        <title>Inventario</title>
+    </head>
+
+    <body>
+
+        <header>
+            <a href="../html/home.html" id="inicio">
+                <img src="../assets/Jawas.webp" alt="logo" width="40px" >
+            </a>
+            <h1>JAWAS JOYAS</h1>
+            <a href="../html/perfil.html" id="perfil">
+                <img src="../assets/perfil.png" alt="logo" width="35px" >
+            </a>
+        </header>
     <h1>Inventario</h1>
 
     <table id="tablaInventario"></table>
 
-    <input type="button" value="Guardar Cambios" id="btnGuardar">
+    <video autoplay muted loop id="myVideo">
+        <source src="../assets/video.mp4" type="video/mp4">
+    </video> 
+
+    <footer>
+        <div class="footer-contenido">
+            <div class="redes-sociales">
+                <p>Puedes encontrarnos en:</p>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/icono_instagram.webp" alt="Instagram" height="68px"></a>
+                <a href="https://twitter.com/?lang=es " target="_blank"><img src="../assets/icono_twitter.png" alt="Twitter" height="55px"></a>
+                <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="../assets/icono_facebook.png" alt="Facebook" height="55px"></a>
+            </div>
+            <div class="politica-privacidad">
+                <a href="politica-de-privacidad.html">Política de Privacidad</a>
+            </div>
+            <div class="copyright">
+                <span>&copy; 2023 Jawas Joyas</span>
+            </div> 
+        </div>
+    </footer>
+
 </body>
 <script type="module" src="../js/inventario.js"></script>
 </html>
