Correcto funcionamiento de creación y modificación del usuario, faltan validaciones y mensajes de error

--- a/Desafio_Jawas/frontend/html/modificarCrearUsuario.html
+++ b/Desafio_Jawas/frontend/html/modificarCrearUsuario.html
@@ -8,13 +8,15 @@
 <body>
     <h1 id="titulo"></h1>
     <img src="" id="fotoUsuario" width="200"><br>
+    <label for="nuevaFoto" id="lblNewFoto"></label><input type="text" id="nuevaFoto"> <br>
     Nombre:<input type="text" id="nombreUsuario"><br>
     Apellido:<input type="text" id="apellidoUsuario"><br>
     Email:<input type="text" id="emailUsuario"><br>
-    Contraseña:<input type="text" id="passwdUsuario"><br>
+    <label for="passwdUsuario" id="lblPasswdUsuario"></label><input type="text" id="passwdUsuario"><br>
     <label for="passwdUsuario" id="lblPasswdUsuario2"></label><input type="text" id="passwdUsuario2"><br>
 
     <input type="button" id="btnEnviar">
+    <input type="button" id="cambioPasswd">
 </body>
 <script type="module" src="../js/modificarCrearUsuario.js"></script>
 </html>
