Función de asignar administrador funcionando correctamente

--- a/Desafio_Jawas/frontend/html/preHome.html
+++ b/Desafio_Jawas/frontend/html/preHome.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../assets/Jawas.webp">
     <title>Pre Home</title>
 </head>
 <body>
     <h1>Elige con que rol vas a operar</h1>
+
+    <input type="button" value="ADMINISTRADOR">
 </body>
 </html>
