Pantalla PreHome funcionando

--- a/Desafio_Jawas/frontend/html/preHome.html
+++ b/Desafio_Jawas/frontend/html/preHome.html
@@ -9,6 +9,11 @@
 <body>
     <h1>Elige con que rol vas a operar</h1>
 
-    <input type="button" value="ADMINISTRADOR">
+    <input type="button" value="ADMINISTRADOR" id="btnAdmin">
+    <input type="button" value="COLABORADOR" id="btnColaborador">
+    <input type="button" value="DISEÑADOR" id="btnDisenador">
+    <input type="button" value="CLASIFICADOR" id="btnClasificador">
+    
 </body>
+<script type="module" src="../js/preHome.js"></script>
 </html>
