crear joya, limpieza de codigo y modificaciones

--- a/Desafio_Jawas/frontend/html/index.html
+++ b/Desafio_Jawas/frontend/html/index.html
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
-    <title>Presentacion</title>
+
+    <link rel="icon" type="image/png" href="../assets/Jawas.webp">
+
+    <title>Presentación</title>
 </head>
+
 <body>
     <header>
         <a href="../html/home.html" id="inicio">
-            <img src="../assets/Jawas.webp" alt="logo" width="40px" >
+            <img src="../assets/Jawas.webp" alt="logo" width="40px">
         </a>
         <h1>JAWAS JOYAS</h1>
         <a href="../html/perfil.html" id="perfil">
-            <img src="../assets/perfil.png" alt="logo" width="35px" >
+            <img src="../assets/perfil.png" alt="logo" width="35px">
         </a>
     </header>
     <div id="divPresentacion">
         <div id="txtPresentacion">
-            <h2>Diseños CIFP Virgen de Gracia</h2>
+            <h2>Joyería CIFP Virgen de Gracia</h2>
             <p>
-                En esta página diseñamos elementos decorativos con hardware inutilizable y/o obsoleto,
-                nuestros elementos se consiguen en el propio centro de estudio, pero también se consiguen 
-                de las donaciones de nuestros colaboradores. tenemos gente que clasifica los elementos 
-                de los lotes que nos son enviados, también tenemos unos diseñadores que crean nuevos 
-                elementos decorativos.
-                Si quieres colaborar con nosotros o quieres alguno de nuestros productos, dale a 
+                Bienvenido a Jawas Joyas, una plataforma única donde transformamos hardware inutilizable y obsoleto en
+                impresionantes piezas de joyería. </br>Nuestros productos son el resultado de la creatividad y la pasión
+                por dar una segunda vida a los elementos que de otra manera serían desechados.</br> Aquí, no solo puedes
+                explorar y adquirir nuestras innovadoras creaciones, sino que también puedes contribuir donando hardware
+                viejo.</br> Únete a nosotros en este emocionante viaje de reciclaje, creatividad y diseño.
             </p>
         </div>
 
-        <input type="button" value="Participa Ya" id="btnParticipar">
+        <input type="button" value="Participar" id="btnParticipar">
     </div>
 
     <video autoplay muted loop id="myVideo">
         <source src="../assets/video.mp4" type="video/mp4">
-    </video> 
+    </video>
 
     <footer>
         <div class="footer-contenido">
             <div class="redes-sociales">
                 <p>Puedes encontrarnos en:</p>
-                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/icono_instagram.webp" alt="Instagram" height="68px"></a>
-                <a href="https://twitter.com/?lang=es " target="_blank"><img src="../assets/icono_twitter.png" alt="Twitter" height="55px"></a>
-                <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="../assets/icono_facebook.png" alt="Facebook" height="55px"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/icono_instagram.webp"
+                        alt="Instagram" height="68px"></a>
+                <a href="https://twitter.com/?lang=es " target="_blank"><img src="../assets/icono_twitter.png"
+                        alt="Twitter" height="55px"></a>
+                <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="../assets/icono_facebook.png"
+                        alt="Facebook" height="55px"></a>
             </div>
             <div class="politica-privacidad">
                 <a href="politica-de-privacidad.html">Política de Privacidad</a>
             </div>
             <div class="copyright">
                 <span>&copy; 2023 Jawas Joyas</span>
-            </div> 
+            </div>
         </div>
     </footer>
 </body>
 <script type="module" src="../js/app.js"></script>
+
 </html>
