--- a/Desafio_Jawas/frontend/html/inventario.html
+++ b/Desafio_Jawas/frontend/html/inventario.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
-        <link rel="stylesheet" type="text/css" href="../css/despieceLote.css">
+        <link rel="stylesheet" type="text/css" href="../css/tablasStyle.css">
         <title>Inventario</title>
     </head>
 
@@ -19,7 +19,8 @@
                 <img src="../assets/perfil.png" alt="logo" width="35px" >
             </a>
         </header>
-    <h1>Inventario</h1>
+    <h1>INVENTARIO</h1>
+    <h3>Selecciona un componente de la lista, después añade o elimina componentes</h3>
 
     <table id="tablaInventario"></table>
 
