--- a/Desafio_Jawas/frontend/html/despieceLote.html
+++ b/Desafio_Jawas/frontend/html/despieceLote.html
@@ -1,65 +1,73 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="../css/despieceLote.css">
-        <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
-        <title>Lotes</title>
-    </head>
 
-    <body>
-        <header>
-            <a href="../html/home.html" id="inicio">
-                <img src="../assets/Jawas.webp" alt="logo" width="40px" >
-            </a>
-            <h1>JAWAS JOYAS</h1>
-            <a href="../html/perfil.html" id="perfil">
-                <img src="../assets/perfil.png" alt="logo" width="35px" >
-            </a>
-        </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../css/tablasStyle.css">
+    <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
 
-        <div>
-            <input type="search" id="searchBar" placeholder="Buscar lote">
-            <button id="searchButton">Buscar</button>
-            <span id="msgErrorSearch"></span>
-        </div>
-        
-        <div>
-            <span id="msgErrorLote"></span>
-        </div>
+    <link rel="icon" type="image/png" href="../assets/Jawas.webp">
 
-        <div>
-            <table id="tablaLoteClasificador">
-                <h2>Lotes por clasificar</h2>
-            </table>
-        </div>
+    <title>Lotes</title>
+</head>
 
-        <div >
-            <input type="button" value="Desguazar Lote" id="btnDesguazar">
-        </div>
+<body>
+    <header>
+        <a href="../html/home.html" id="inicio">
+            <img src="../assets/Jawas.webp" alt="logo" width="40px">
+        </a>
+        <h1>JAWAS JOYAS</h1>
+        <a href="../html/perfil.html" id="perfil">
+            <img src="../assets/perfil.png" alt="logo" width="35px">
+        </a>
+    </header>
 
-        <video autoplay muted loop id="myVideo">
-            <source src="../assets/video.mp4" type="video/mp4">
-        </video> 
-    
-        <footer>
-            <div class="footer-contenido">
-                <div class="redes-sociales">
-                    <p>Puedes encontrarnos en:</p>
-                    <a href="https://www.instagram.com/" target="_blank"><img src="../assets/icono_instagram.webp" alt="Instagram" height="68px"></a>
-                    <a href="https://twitter.com/?lang=es " target="_blank"><img src="../assets/icono_twitter.png" alt="Twitter" height="55px"></a>
-                    <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="../assets/icono_facebook.png" alt="Facebook" height="55px"></a>
-                </div>
-                <div class="politica-privacidad">
-                    <a href="politica-de-privacidad.html">Política de Privacidad</a>
-                </div>
-                <div class="copyright">
-                    <span>&copy; 2023 Jawas Joyas</span>
-                </div> 
+    <h1> LOTES PARA CLASIFICAR </h1>
+
+    <div>
+        <input type="search" id="buscador" placeholder="Buscar lote">
+        <button id="btnBuscar">Buscar</button>
+        <span id="msgErrorBuscar"></span>
+    </div>
+
+    <div>
+        <table id="tablaLoteClasificador"></table>
+    </div>
+
+    <div>
+        <span id="msgErrorLote"></span>
+    </div>
+
+    <div>
+        <input type="button" value="Desguazar Lote" id="btnDesguazar">
+    </div>
+
+    <video autoplay muted loop id="myVideo">
+        <source src="../assets/video.mp4" type="video/mp4">
+    </video>
+
+    <footer>
+        <div class="footer-contenido">
+            <div class="redes-sociales">
+                <p>Puedes encontrarnos en:</p>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../assets/icono_instagram.webp"
+                        alt="Instagram" height="68px"></a>
+                <a href="https://twitter.com/?lang=es " target="_blank"><img src="../assets/icono_twitter.png"
+                        alt="Twitter" height="55px"></a>
+                <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="../assets/icono_facebook.png"
+                        alt="Facebook" height="55px"></a>
             </div>
-        </footer>
+            <div class="politica-privacidad">
+                <a href="politica-de-privacidad.html">Política de Privacidad</a>
+            </div>
+            <div class="copyright">
+                <span>&copy; 2023 Jawas Joyas</span>
+            </div>
+        </div>
+    </footer>
 
-    </body>
-    <script type="module" src="../js/despieceLote.js"></script>
+</body>
+<script type="module" src="../js/despieceLote.js"></script>
+
 </html>
