--- a/Desafio_Jawas/frontend/html/componentes.html
+++ b/Desafio_Jawas/frontend/html/componentes.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link class="comun" rel="stylesheet" type="text/css" href="../css/comun.css">
         <link rel="stylesheet" type="text/css" href="../css/tablasStyle.css">
+
+        <link rel="icon" type="image/png" href="../assets/Jawas.webp">
+        
         <title>Componentes</title>
     </head>
 
