Cambiado el modificar usuarios del administrador e implementado el añadir roles a un usuario

--- a/Desafio_Jawas/frontend/html/modificarCrearUsuario.html
+++ b/Desafio_Jawas/frontend/html/modificarCrearUsuario.html
@@ -11,7 +11,7 @@
     <span id="msgExito"></span><br>
 
     <img src="" id="fotoUsuario" width="200"><br>
-    <label for="nuevaFoto" id="lblNewFoto"></label><input type="text" id="nuevaFoto"> <br>
+    <label for="nuevaFoto" id="lblNewFoto"></label><input type="file" id="nuevaFoto"><input type="button" value="Subir Imagen" id="btnSubirImagen"> <br>
     <span id="msgErrorFoto"></span><br>
     Nombre:<input type="text" id="nombreUsuario"><br>
     <span id="msgErrorNombre"></span><br>
@@ -19,13 +19,19 @@
     <span id="msgErrorApellido"></span><br>
     Email:<input type="text" id="emailUsuario"><br>
     <span id="msgErrorEmail"></span><br>
+
+    <input type="button" id="btnEnviar"><br>
+
     <label for="passwdUsuario" id="lblPasswdUsuario"></label><input type="text" id="passwdUsuario"><br>
     <span id="msgErrorPasswd"></span><br>
     <label for="passwdUsuario" id="lblPasswdUsuario2"></label><input type="text" id="passwdUsuario2"><br>
     <span id="msgErrorPasswd2"></span><br>
 
-    <input type="button" id="btnEnviar">
-    <input type="button" id="cambioPasswd">
+    <input type="button" id="btnCrearUsuario">
+    <input type="button" id="cambioPasswd"><br>
+
+    <select name="" id="selectRoles"></select>
+    <input type="button" id="btnAddRol">
 </body>
 <script type="module" src="../js/modificarCrearUsuario.js"></script>
 </html>
