--- a/Desafio_Jawas/frontend/html/componentes.html
+++ b/Desafio_Jawas/frontend/html/componentes.html
@@ -23,11 +23,11 @@
     <header class="d-flex flex-column align-items-center p-3 " style="background-color: rgba(220, 255, 132, 0.855); color: rgb(0, 0, 0);">
         <div class="header-contenido d-flex align-items-center justify-content-center">
         <a href="../html/home.html" id="inicio">
-            <img src="../assets/Imagen 1.png" alt="logo" width="100px">
+            <img src="../assets/Imagen 1.png" alt="logo" width="110px">
         </a>
         <h1 class="titulo">JAWAS GEMS</h1>
         <a href="../html/perfil.html" id="perfil">
-            <img src="../assets/Imagen 1.png" alt="logo" width="100px">
+            <img src="../assets/jawaperfil.png" alt="logo" width="100px">
         </a>
     </header>
     
