--- a/Desafio_Jawas/frontend/html/registro.html
+++ b/Desafio_Jawas/frontend/html/registro.html
@@ -22,7 +22,7 @@
 
     <header>
         <a href="../html/home.html" id="inicio">
-            <img src="../assets/Jawas.webp" alt="logo" width="40px">
+            <img src="../assets/Imagen 1.png" alt="logo" width="40px">
         </a>
         <h1>JAWAS JOYAS</h1>
         <a href="../html/perfil.html" id="perfil">
