Cierre de sesion correcto, solo implementado en el perfil

--- a/Desafio_Jawas/frontend/html/perfil.html
+++ b/Desafio_Jawas/frontend/html/perfil.html
@@ -35,6 +35,8 @@
     <span id="msgErrorPasswd"></span><br>
 
     <input type="button" value="Cambiar contraseña" id="btnNewPasswd"><br>
+
+    <input type="button" value="Cerrar sesión" id="btnCerrarSesion"><br>
     
 
     <video autoplay muted loop id="myVideo">
